--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "html2canvas": "^1.4.1",
     "https": "^1.0.0",
     "jspdf": "^2.5.1",
     "react": "^17.0.2",
